--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,12 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 project(mode CXX)
 
-set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -O3 -Wall -fomit-frame-pointer -I/home/rfriedma/apps/fmt/include -L/home/rfriedma/apps/fmt /home/rfriedma/apps/fmt/libfmt.a")
+set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -O3 -g -fomit-frame-pointer -I/home/rfriedma/apps/fmt/include -L/home/rfriedma/apps/fmt /home/rfriedma/apps/fmt/libfmt.a")
 find_package(benchmark REQUIRED)
 
 
 #set(SOURCE mode.cc mclct_test.cc)
-set(SOURCE mode.cc)
+set(SOURCE mode.cc mode_pmr.cc h.cc)
 
 
 add_executable(${PROJECT_NAME} ${SOURCE})
